Incorporated review
also additional changes which were stated in the meeting are now fixed. For instance the frontend user object does not contain a password anymore.