@@ -8,6 +8,7 @@ import jakarta.inject.Inject;
 
 import java.util.Arrays;
 import java.util.HashSet;
+import java.util.Set;
 
 @ApplicationScoped
 public class JWT_Util {
@@ -18,7 +19,7 @@ public class JWT_Util {
     public static String generateToken(String userId, String username, String role) {
         return Jwt.issuer("user-service")
                 .subject(userId)
-                .groups(new HashSet<>(Arrays.asList("USER")))
+                .groups(Set.of("USER"))
                 .claim("role", role)
                 .claim("username", username)
 //                .expiresAt(System.currentTimeMillis() / 1000 + 3600)
